--- a/wp-content/themes/twentysixteen/css/muvi/custom.css
+++ b/wp-content/themes/twentysixteen/css/muvi/custom.css
@@ -5,28 +5,32 @@
 	width: 25%;
 }
 
+.affix .logo{
+	width: 23%;
+}
+
 .logo-small{
 	width: 10%;
 }
 
 .principal-carousel .owl-item:nth-child(1){
-	background-image: url(../img/slider/3d.jpg);
+	background-image: url(../../img/slider/3d.jpg);
 	background-size: cover;
 }
 .principal-carousel .owl-item:nth-child(2){
-	background-image: url(../img/slider/2.jpg);
+	background-image: url(../../img/slider/2.jpg);
 	background-size: cover;
 }
 .principal-carousel .owl-item:nth-child(3){
-	background-image: url(../img/slider/3.jpg);
+	background-image: url(../../img/slider/3.jpg);
 	background-size: cover;
 }
 .principal-carousel .owl-item:nth-child(4){
-	background-image: url(../img/slider/4.jpg);
+	background-image: url(../../img/slider/4.jpg);
 	background-size: cover;
 }
 .principal-carousel .owl-item:nth-child(5){
-	background-image: url(../img/slider/5.png);
+	background-image: url(../../img/slider/5.png);
 	background-size: cover;
 }
 
