--- a/wp-content/themes/twentysixteen/style.css
+++ b/wp-content/themes/twentysixteen/style.css
@@ -748,7 +748,7 @@ fieldset[disabled] .btn-template-primary.active {
     background-color: #ffffff;
 }
 #intro {
-    background: url('../img/home.jpg') no-repeat center top;
+    background: url('img/home.jpg') no-repeat center top;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -808,7 +808,7 @@ fieldset[disabled] .btn-template-primary.active {
     padding: 30px;
     margin-bottom: 0;
     position: relative;
-    background: url('../img/photogrid.jpg') center center repeat;
+    background: url('img/photogrid.jpg') center center repeat;
     background-size: cover;
     -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
@@ -1158,7 +1158,7 @@ fieldset[disabled] .btn-template-primary.active {
 }
 .home-carousel {
     position: relative;
-    background: url('../img/photogrid.jpg') center center repeat;
+    background: url('img/photogrid.jpg') center center repeat;
     background-size: cover;
     -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
@@ -1741,7 +1741,7 @@ fieldset[disabled] .btn-template-primary.active {
     border: none;
 }
 #heading-breadcrumbs {
-    background: url('../img/texture-bw.png') center center repeat;
+    background: url('img/texture-bw.png') center center repeat;
     padding: 20px 0;
     margin-bottom: 40px;
 }
@@ -1770,7 +1770,7 @@ fieldset[disabled] .btn-template-primary.active {
     padding: 60px 0;
 }
 .bar.background-pentagon {
-    background: url('../img/texture-bw.png') center center repeat;
+    background: url('img/texture-bw.png') center center repeat;
     border-top: solid 1px #999999;
     border-bottom: solid 1px #999999;
 }
@@ -1784,12 +1784,12 @@ fieldset[disabled] .btn-template-primary.active {
     background: #fff;
 }
 .bar.background-image-fixed-1 {
-    background: url('../img/fixed-background-1.jpg') center top no-repeat;
+    background: url('img/fixed-background-1.jpg') center top no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
 .bar.background-image-fixed-2 {
-    background: url('../img/fixed-background-2.jpg') center top no-repeat;
+    background: url('img/fixed-background-2.jpg') center top no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
